# redd-todo

./: .gitignore  README.md  build.js  changelog.md  generate-appx-icons.js  generate-store-assets.js  main.js  package-lock.json  package.json  profile.plist
assets/: icon.icns
docs/: latest-versions.json  privacy_policy.html  releasing-mas.md
netlify/functions/: auth.js  exchange.js
scripts/: build-linux.sh  build-mas-package.js  build-msix.ps1  collect-distribution-artifacts.js  normalize-linux-artifact-names.js  notarize-direct-mac.js  verify-windows-store-artifacts.js
scripts/docker/: linux-builder.Dockerfile
src/: app.js  index.html  reminders-connector  reminders-connector-Info.plist  reminders-connector.swift  styles.css  tauri-api.js  ui-zoom.js
src-tauri/: Cargo.toml  Info.plist  tauri.appstore.temp.conf.json  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  opener.rs
src-tauri/src/commands/: app.rs  mod.rs  oauth.rs  reminders.rs  window.rs
src/plan/: calendar-sync.js  plan-base.css  plan-base.js  plan.css  plan.js
