[package]
name = "redd-do"
version = "2.0.0"
description = "ReDD Do - keep your goals in sight and get back to what you wanted to do"
authors = ["The Reduce Digital Distraction Project <team@reddfocus.org>"]
license = "CC-BY-NC-ND-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
urlencoding = "2.1"
url = "2.5"
open = "5"
tauri-plugin-updater = "2"
dotenvy = "0.15"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tiny_http = "0.12"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tauri-plugin-http = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
